SOURCE/objects/Substance_Abuse_History__c.object
<CustomObject>
    <fields>
        <fullName>Age_of_first_use__c</fullName>
        <label>Age of first use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Amount__c</fullName>
        <label>Daily Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <label>Substance Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>LSD</fullName>
                </value>
                <value>
                    <fullName>Mushrooms</fullName>
                </value>
                <value>
                    <fullName>Ecstasy</fullName>
                </value>
                <value>
                    <fullName>Marijuana</fullName>
                </value>
                <value>
                    <fullName>Heroin</fullName>
                </value>
                <value>
                    <fullName>Klonopin</fullName>
                </value>
                <value>
                    <fullName>Cocaine</fullName>
                </value>
                <value>
                    <fullName>Barbiturates</fullName>
                </value>
                <value>
                    <fullName>Valium</fullName>
                </value>
                <value>
                    <fullName>Ativan</fullName>
                </value>
                <value>
                    <fullName>Xanax</fullName>
                </value>
                <value>
                    <fullName>Librium</fullName>
                </value>
                <value>
                    <fullName>Crack Cocaine</fullName>
                </value>
                <value>
                    <fullName>Crystal Meth</fullName>
                </value>
                <value>
                    <fullName>Bath Salts</fullName>
                </value>
                <value>
                    <fullName>Adderall</fullName>
                </value>
                <value>
                    <fullName>Caffeine</fullName>
                </value>
                <value>
                    <fullName>Cigarettes</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Angel Dust</fullName>
                </value>
                <value>
                    <fullName>Synthetic Marijuana</fullName>
                </value>
                <value>
                    <fullName>THC</fullName>
                </value>
                <value>
                    <fullName>Acid</fullName>
                </value>
                <value>
                    <fullName>Fentanyl</fullName>
                </value>
                <value>
                    <fullName>Percocet</fullName>
                </value>
                <value>
                    <fullName>Morphine</fullName>
                </value>
                <value>
                    <fullName>Kratom</fullName>
                </value>
                <value>
                    <fullName>Vicodin</fullName>
                </value>
                <value>
                    <fullName>Dilaudid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Use__c</fullName>
        <label>Last Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Orally</fullName>
                </value>
                <value>
                    <fullName>Intravenously</fullName>
                </value>
                <value>
                    <fullName>Intramusculary</fullName>
                </value>
                <value>
                    <fullName>Nasally</fullName>
                </value>
                <value>
                    <fullName>Inhalation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Assessment</label>
        <referenceTo>PreAssesment__c</referenceTo>
        <relationshipLabel>Substance Abuse History</relationshipLabel>
        <relationshipName>Substance_Abuse_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Substance Abuse History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAH-{000}</displayFormat>
        <label>Substance Abuse History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substance Abuse History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>